--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>Voice-Coaching-POC</title>
 
   <!-- Bootstrap core CSS -->
-  <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -117,7 +117,7 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <!-- <script src="vendor/scrollreveal/scrollreveal.min.js"></script> -->
+  <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
